--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,6 @@
 .App {
   text-align: center;
-  background-image: url("./pictures/fondosmall.png");
-  background-repeat: repeat;
-  width: 100%;
-  height: 100%;
+
 }
 
 .App-logo {
@@ -41,8 +38,10 @@
   }
 }
 .logo{
-  max-width: 20%;
+  max-width: 30%;
   height: auto;
+
+
 }
 .imgtmbl {
   border: 1px solid #ddd;
@@ -52,3 +51,26 @@
   margin: 5px;
   max-height: 300px ;
 }
+.navbar{background-color: white;
+  border-bottom : 5px solid #a18d8c;
+  border-radius: 4px;
+
+}
+.menulink{
+  color:#984706;
+  color: blue;
+  font-weight: bold;
+
+}
+.me-auto{
+
+display: flex;
+flex-wrap: wrap;
+
+}
+
+.d-block w-100{  max-width: 80%;
+  height: auto;}
+
+
+
