--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,8 @@
 .App {
   text-align: center;
-
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
@@ -25,20 +15,14 @@
   color: white;
 }
 
+
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
 .logo{
-  max-width: 30%;
+  max-width: 60%;
   height: auto;
 
 
@@ -52,14 +36,37 @@
   max-height: 300px ;
 }
 .navbar{background-color: white;
+  max-height: 20%;
   border-bottom : 5px solid #a18d8c;
   border-radius: 4px;
+  
+
+}
+
+h4{margin: 10px;
+font-size: 200%;
+text-align: justify;
+}
+
+.nav{border-bottom : 5px solid #a18d8c;
+  border-radius: 4px;
+  display: flex;
+  justify-content:space-between;
+}
+.navbarcont{border-bottom : 5px solid #a18d8c;
+  border-radius: 4px;
+  display: flex;
+  justify-content:space-between;
+
+
 
 }
 .menulink{
   color:#984706;
   color: blue;
   font-weight: bold;
+  font-size: 250%;
+  margin:5px;
 
 }
 .me-auto{
@@ -69,8 +76,33 @@ flex-wrap: wrap;
 
 }
 
-.d-block w-100{  max-width: 80%;
+.d-block-w-100{  max-width: 80%;
   height: auto;}
+  
+.main-container{
+display: flex;
+align-items: center;
+flex-direction: column;
+margin: 5px;
+background-color: white;
 
+  }
 
+p{font-family: 'Times New Roman', Times, serif
+  ;
+font-size: large;
+text-align: justify;
+margin:5px;}
 
+.container1{
+  display: flex;
+  flex-direction: row;
+}
+p::first-letter {
+  font-size: 300%;
+  color:red;
+}
+.imagetext{
+margin:15px;
+align-self: center;
+}
