--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
   font-family: 'Shadows Into Light', serif;
-  background-image: url("./pictures/fondosmall.png");
+  /*background-image: url("./pictures/fondosmall.png");
   background-repeat: repeat;
   width: 100%;
   height: 100%;
 
-}
+*/}
 
 a {
   list-style: none;
@@ -36,7 +36,10 @@ textarea {
   border: 2px solid red;
   border-radius: 4px;
 }
-
+.main-text{
+  margin :10px;
+  padding: 10px;
+}
 
 nav li {
   list-style: none;
