--- a/src/App.css
+++ b/src/App.css
@@ -189,3 +189,10 @@ width:200px ;
 
   font-family: cursive;
 }
+.form-control2{
+  width:400px;
+  height: 100px;
+}
+.displaystory{
+  margin: auto;
+}
