--- a/src/App.css
+++ b/src/App.css
@@ -196,3 +196,26 @@ width:200px ;
 .displaystory{
   margin: auto;
 }
+
+
+.btn-color{
+  background-color: #0e1c36;
+  color: #fff;
+  
+}
+
+.profile-image-pic{
+  height: 200px;
+  width: 200px;
+  object-fit: cover;
+}
+
+
+
+.cardbody-color{
+  background-color: #ebf2fa;
+}
+
+a{
+  text-decoration: none;
+}
