--- a/src/App.css
+++ b/src/App.css
@@ -115,7 +115,7 @@ p{font-family: 'Times New Roman', Times, serif
   ;
 font-size: large;
 text-align: justify;
-margin:5px;}
+margin:5px}
 
 .container1{
   display: flex;
@@ -218,4 +218,10 @@ width:200px ;
 
 a{
   text-decoration: none;
+}
+.dogDetails{
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
