--- a/src/App.css
+++ b/src/App.css
@@ -225,3 +225,10 @@ a{
   flex-direction: column;
   align-items: center;
 }
+
+.catDetails{
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
